# gputype

./: Cargo.toml  Makefile  README.md  a.out  main.c
src/: frag.glsl  main.rs  vertex.glsl
src/util/: mod.rs
