[package]
name = "gputype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shaderc = "0.8.3"
ttf-parser = "0.20.0"
vulkano-shaders = "0.34.0"
winit = { version="0.29.10", features=["rwh_05"]}
[dependencies.vulkano]
version = "0.34.1"
features = ["macros"]
